chore: solve exercise 1 from ch06

--- a/pythonds-6-PE.ipynb
+++ b/pythonds-6-PE.ipynb
@@ -1,16 +1,116 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8349a355",
+   "metadata": {},
+   "source": [
+    "# Chapter 6:\n",
+    "\n",
+    "Programming Exercises"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "3567b904",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num being searched: 431499\n",
+      "==> Function 'sequential_search' took 652712 nanoseconds to execute.\n",
+      "==> Function 'binary_search' took 14717 nanoseconds to execute.\n",
+      "num: 431499 UNFOUND\n",
+      "num being searched: 68481\n",
+      "==> Function 'sequential_search' took 619246 nanoseconds to execute.\n",
+      "==> Function 'binary_search' took 9594 nanoseconds to execute.\n",
+      "num: 68481 UNFOUND\n",
+      "num being searched: 558417\n",
+      "==> Function 'sequential_search' took 725876 nanoseconds to execute.\n",
+      "==> Function 'binary_search' took 9304 nanoseconds to execute.\n",
+      "num: 558417 UNFOUND\n",
+      "num being searched: 715425\n",
+      "==> Function 'sequential_search' took 647418 nanoseconds to execute.\n",
+      "==> Function 'binary_search' took 7919 nanoseconds to execute.\n",
+      "num: 715425 UNFOUND\n",
+      "num being searched: 943733\n",
+      "==> Function 'sequential_search' took 725333 nanoseconds to execute.\n",
+      "==> Function 'binary_search' took 8376 nanoseconds to execute.\n",
+      "num: 943733 UNFOUND\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "1. Set up a random experiment to test the difference between a sequential search and\n",
     "a binary search on a list of integers\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "Process thinking:\n",
+    "main functions:\n",
+    "- a generator of sorted list of integer number between 0, 1000000\n",
+    "- Timer\n",
+    "- sequential_search\n",
+    "- binary_search\n",
+    "\"\"\"\n",
+    "import random, time\n",
+    "\n",
+    "def time_it(func):\n",
+    "    def wrapper(*args, **kargs):\n",
+    "        start_time = time.perf_counter_ns()\n",
+    "        result = func(*args, **kargs)\n",
+    "        end_time = time.perf_counter_ns()\n",
+    "        elapsed_time = end_time - start_time\n",
+    "        print(f\"==> Function '{func.__name__}' took {elapsed_time} nanoseconds to execute.\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "def generator_list(size_of_list: int) -> list:\n",
+    "    res: list[int]= []\n",
+    "    for num in range(size_of_list):\n",
+    "        res.append(random.randint(0,1000000))\n",
+    "    res.sort()\n",
+    "    return res\n",
+    "@time_it\n",
+    "def sequential_search(num_found: int, list_of_numbers: list[int])-> bool:\n",
+    "    for num in list_of_numbers:\n",
+    "        if num_found == num:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "@time_it\n",
+    "def binary_search(num_found: int, list_of_numbers: list[int]) -> bool:\n",
+    "    length_of_list: int = len(list_of_numbers)\n",
+    "    new_len: list = list_of_numbers\n",
+    "    low: int = 0\n",
+    "    high: int = length_of_list\n",
+    "    while low < high:\n",
+    "        mid: int = (low + high)//2\n",
+    "        if list_of_numbers[mid] == num_found:\n",
+    "            return True\n",
+    "        elif list_of_numbers[mid] < num_found:\n",
+    "            low = mid+1\n",
+    "        else:\n",
+    "            high = mid\n",
+    "    return False\n",
+    "\n",
+    "def simulator(num_of_simulations: int, num_of_elements: int) -> None:\n",
+    "    nums: list[int] = generator_list(num_of_elements)\n",
+    "\n",
+    "    for i in range(num_of_simulations):\n",
+    "        num_to_search: int = random.randint(0, 1000000)\n",
+    "        print(f\"num being searched: {num_to_search}\")\n",
+    "        sequential_bool: bool = sequential_search(num_to_search, nums)\n",
+    "        binary_bool: bool = binary_search(num_to_search, nums)\n",
+    "        if (sequential_bool and binary_bool):\n",
+    "            print(f\"num: {num_to_search} was found\")\n",
+    "        else:\n",
+    "            print(f\"num: {num_to_search} UNFOUND\")\n",
+    "\n",
+    "simulator(5, 10000)\n"
    ]
   },
   {
