chore: solve exercise 2 from ch06

--- a/pythonds-6-PE.ipynb
+++ b/pythonds-6-PE.ipynb
@@ -118,7 +118,39 @@
    "execution_count": null,
    "id": "76ffd588",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Recursive Function\n",
+      "\n",
+      "1: it took 0.007500998995965347 seconds\n",
+      "2: it took 0.006183687997690868 seconds\n",
+      "3: it took 0.005607852996035945 seconds\n",
+      "4: it took 0.006166407998534851 seconds\n",
+      "5: it took 0.005204161003348418 seconds\n",
+      "6: it took 0.004991820998839103 seconds\n",
+      "7: it took 0.0057559909982956015 seconds\n",
+      "8: it took 0.005454427999211475 seconds\n",
+      "9: it took 0.005714817001717165 seconds\n",
+      "10: it took 0.004822075003175996 seconds\n",
+      "\n",
+      "# Iterative Function\n",
+      "\n",
+      "1: it took 0.0030721010043635033 seconds\n",
+      "2: it took 0.0030030859998078085 seconds\n",
+      "3: it took 0.003466119997028727 seconds\n",
+      "4: it took 0.002979381002660375 seconds\n",
+      "5: it took 0.0029612970029120333 seconds\n",
+      "6: it took 0.002887654998630751 seconds\n",
+      "7: it took 0.003419136999582406 seconds\n",
+      "8: it took 0.0037411920056911185 seconds\n",
+      "9: it took 0.0029507389990612864 seconds\n",
+      "10: it took 0.003006300001288764 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "2. Use the binary search functions given in the text(recursive and iterative). \n",
