--- a/pythonds-6-PE.ipynb
+++ b/pythonds-6-PE.ipynb
@@ -156,7 +156,112 @@
     "2. Use the binary search functions given in the text(recursive and iterative). \n",
     "Generate a random, ordered list of integers and do a benchmark analysis for each one.\n",
     "what are you result? Can you explain them?\n",
-    "\"\"\""
+    "\n",
+    "Result: the binary search iterative performs better than a binary search recursive.\n",
+    "Explain: it is due to space time where the iterative tends to have a constant space time, \n",
+    "the binary search recursive will tend to increase due to the creation of sub-function(stack) for each new slice to solve the sub-problems.\n",
+    "\"\"\"\n",
+    "import random, timeit\n",
+    "\n",
+    "def generator_list(size_of_list: int) -> list:\n",
+    "    res: list[int]= []\n",
+    "    for num in range(size_of_list):\n",
+    "        res.append(random.randint(0,1000000))\n",
+    "    res.sort()\n",
+    "    return res\n",
+    "\n",
+    "def binarySearchRecursive(alist, item):\n",
+    "    if len(alist) == 0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        midpoint = len(alist)//2\n",
+    "        if alist[midpoint]==item:\n",
+    "          return True\n",
+    "        else:\n",
+    "          if item<alist[midpoint]:\n",
+    "            return binarySearchRecursive(alist[:midpoint],item)\n",
+    "          else:\n",
+    "             return binarySearchRecursive(alist[midpoint+1:], item)\n",
+    "\n",
+    "\n",
+    "def binarySearchIterative(alist, item):\n",
+    "    first = 0\n",
+    "    last = len(alist)-1\n",
+    "    found = False\n",
+    "\n",
+    "    while first <= last and not found:\n",
+    "        midpoint = (first + last)//2\n",
+    "        if alist[midpoint] == item:\n",
+    "           found = True\n",
+    "        else:\n",
+    "            if item < alist[midpoint]:\n",
+    "               last = midpoint-1\n",
+    "            else:\n",
+    "               first = midpoint+1\n",
+    "    return found\n",
+    "\n",
+    "def printSeconds(datas: list):\n",
+    "   ind: int = 0\n",
+    "   for data in datas:\n",
+    "    ind +=1\n",
+    "    print(f\"{ind}: it took {data} seconds\")\n",
+    "    \n",
+    "data_list: list = generator_list(10000)\n",
+    "numFound = random.randint(0,1000000)\n",
+    "\n",
+    "TEST_CODE_RECURSIVE = '''\n",
+    "binarySearchRecursive(data_list, numFound)\n",
+    "\n",
+    "''' \n",
+    "TEST_CODE_ITERATIVE = ''' \n",
+    "binarySearchIterative(data_list, numFound)\n",
+    "'''\n",
+    "\n",
+    "times_recursive = timeit.repeat(stmt=TEST_CODE_RECURSIVE, globals=globals(), repeat=10, number=10000)\n",
+    "times_iterative = timeit.repeat(stmt=TEST_CODE_ITERATIVE, globals=globals(), repeat=10, number=10000)\n",
+    "\n",
+    "print(\"# Recursive Function\")\n",
+    "print()\n",
+    "printSeconds(times_recursive)\n",
+    "print()\n",
+    "\n",
+    "print(\"# Iterative Function\")\n",
+    "print()\n",
+    "printSeconds(times_iterative)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d2d60d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.5480996808037162e-05, 1.1609001376200467e-05, 1.1538002581801265e-05, 1.1185999028384686e-05, 1.0807998478412628e-05, 1.1819996871054173e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "number: define the number of times the block of code will be executed meaning the result of execution time, is the stmt * number(execution time)\n",
+    "repeat: define the number of times the stmt * number will be executed and the repeat represents the number of elements to be returned\n",
+    "\"\"\"\n",
+    "import timeit\n",
+    "\n",
+    "\n",
+    "def run_experiment(number_of_repeats, number_of_runs=1000):\n",
+    "    execution_time = timeit.repeat(\n",
+    "        \"from functools import reduce; reduce((lambda x, y: x * y), range(1, 5))\",\n",
+    "        repeat=number_of_repeats,\n",
+    "        number=number_of_runs\n",
+    "    )\n",
+    "    return execution_time\n",
+    "\n",
+    "print(run_experiment(6, 10))\n"
    ]
   },
   {
