chore: solve exercise 3 from ch06

--- a/pythonds-6-PE.ipynb
+++ b/pythonds-6-PE.ipynb
@@ -269,13 +269,134 @@
    "execution_count": null,
    "id": "fcca5224",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Recursive Function\n",
+      "\n",
+      "1: it took 0.323334 seconds\n",
+      "2: it took 0.292657 seconds\n",
+      "3: it took 0.292835 seconds\n",
+      "4: it took 0.352345 seconds\n",
+      "5: it took 0.293273 seconds\n",
+      "6: it took 0.288045 seconds\n",
+      "7: it took 0.300978 seconds\n",
+      "8: it took 0.301322 seconds\n",
+      "9: it took 0.284814 seconds\n",
+      "10: it took 0.302414 seconds\n",
+      "\n",
+      "# Recursive Function Without Slice\n",
+      "\n",
+      "1: it took 0.041870 seconds\n",
+      "2: it took 0.033780 seconds\n",
+      "3: it took 0.025084 seconds\n",
+      "4: it took 0.027476 seconds\n",
+      "5: it took 0.024232 seconds\n",
+      "6: it took 0.026300 seconds\n",
+      "7: it took 0.023978 seconds\n",
+      "8: it took 0.028174 seconds\n",
+      "9: it took 0.026392 seconds\n",
+      "10: it took 0.032382 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "3. Implement the binary search using recursion without the slice operator. Recall that \n",
     "you will need to pass the list along with starting and ending index values for the sublist\n",
-    "Generate a rondom ordered list of integres and do a benchmark analysis.\n",
-    "\"\"\""
+    "Generate a random ordered list of integres and do a benchmark analysis.\n",
+    "\"\"\"\n",
+    "import random, timeit\n",
+    "\n",
+    "def generator_list(size_of_list: int) -> list:\n",
+    "    res: list[int]= []\n",
+    "    for num in range(size_of_list):\n",
+    "        res.append(random.randint(0,1000000))\n",
+    "    res.sort()\n",
+    "    return res\n",
+    "\n",
+    "def binarySearchRecursive(alist, item):\n",
+    "    if len(alist) == 0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        midpoint = len(alist)//2\n",
+    "        if alist[midpoint]==item:\n",
+    "          return True\n",
+    "        else:\n",
+    "          if item<alist[midpoint]:\n",
+    "            return binarySearchRecursive(alist[:midpoint],item)\n",
+    "          else:\n",
+    "             return binarySearchRecursive(alist[midpoint+1:], item)\n",
+    "\n",
+    "def binarySearchRecursiveWithoutSlice(alist, item, first: int = 0, last: int = 0) -> bool:\n",
+    "    if len(alist) == 0 or last == 0 or first > last:\n",
+    "        return False\n",
+    "    else:\n",
+    "        midpoint = (first + last)//2\n",
+    "        if alist[midpoint]==item:\n",
+    "          return True\n",
+    "        else:\n",
+    "          if item<alist[midpoint]:\n",
+    "            return binarySearchRecursiveWithoutSlice(alist,item, first, midpoint-1)\n",
+    "          else:\n",
+    "             return binarySearchRecursiveWithoutSlice(alist, item, midpoint+1, last)\n",
+    "def printSeconds(datas: list):\n",
+    "   ind: int = 0\n",
+    "   for data in datas:\n",
+    "    ind +=1\n",
+    "    print(f\"{ind}: it took {data:.06f} seconds\")\n",
+    "\n",
+    "   \n",
+    "data_list: list = generator_list(10000)\n",
+    "# Select a random items from the list in python\n",
+    "numExisted = random.choice(data_list)\n",
+    "numRand = random.randint(0, 1000000)\n",
+    "\n",
+    " \n",
+    "TEST_CODE_RECURSIVE_A = '''\n",
+    "binarySearchRecursive(data_list, numRand)\n",
+    "''' \n",
+    "\n",
+    "TEST_CODE_RECURSIVE_WITHOUT_SLICE = ''' \n",
+    "binarySearchRecursiveWithoutSlice(data_list, numRand, 0, len(data_list))\n",
+    " '''\n",
+    " \n",
+    "times_recursive = timeit.repeat(stmt=TEST_CODE_RECURSIVE_A, globals=globals(), repeat=5, number=10000)\n",
+    "times_recursive_without_slice = timeit.repeat(stmt=TEST_CODE_RECURSIVE_WITHOUT_SLICE, globals=globals(), repeat=5, number=10000)\n",
+    "\n",
+    "TEST_CODE_RECURSIVE_B = '''\n",
+    "binarySearchRecursive(data_list, numExisted)\n",
+    "''' \n",
+    "\n",
+    "TEST_CODE_RECURSIVE_WITHOUT_SLICE_A = ''' \n",
+    "binarySearchRecursiveWithoutSlice(data_list, numExisted, 0, len(data_list))\n",
+    " '''\n",
+    "\n",
+    "\n",
+    "print(\"##### Random number #####\")\n",
+    "\n",
+    "print(\"# Recursive Function\")\n",
+    "print()\n",
+    "printSeconds(times_recursive)\n",
+    "print()\n",
+    "\n",
+    "print(\"# Recursive Function Without Slice\")\n",
+    "print()\n",
+    "printSeconds(times_recursive_without_slice)\n",
+    "print()\n",
+    "print(\"##### Selected randomly in the list of number to search from #####\")\n",
+    "\n",
+    "print(\"# Recursive Function\")\n",
+    "print()\n",
+    "printSeconds(timeit.repeat(stmt=TEST_CODE_RECURSIVE_B, globals=globals(), repeat=5, number=10000))\n",
+    "print()\n",
+    "\n",
+    "print(\"# Recursive Function Without Slice\")\n",
+    "print()\n",
+    "printSeconds(timeit.repeat(stmt=TEST_CODE_RECURSIVE_WITHOUT_SLICE_A, globals=globals(), repeat=5, number=10000))\n",
+    "\n"
    ]
   },
   {
